Major : -Added utils class that can be used in other project to ease the use of RxJava Minor : -Removed the AsyncTask example in order to be potentially less confusive -Added some comments to clarify how Rx can be manipulated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">Search</string>
     <string name="search_button">Search</string>
+    <string name="something_didn_t_worked">Something didn\'t worked :/</string>
 </resources>
